# dpsk-ocr-highlighter

./: DeepSeek-OCR.ipynb  DeepSeek-OCR.py  README.md  pyproject.toml  vllm_dpsk-ocr.sh
