

# uv venv
# source .venv/bin/activate
# uv sync --prerelease=allow --index-strategy unsafe-best-match

# # Until v0.11.1 release, you need to install vLLM from nightly build
# uv pip install -U vllm --pre --extra-index-url https://wheels.vllm.ai/nightly --extra-index-url https://download.pytorch.org/whl/cu129 --index-strategy unsafe-best-match

## python -m ipykernel install --user --name vllm-dpsk-ocr --display-name "vllm-dpsk-ocr (uv .venv)"

[project]
name = "vllm-ocr-server"
version = "0.1.0"
description = "Environment for serving deepseek-OCR with vLLM and use it with OpenAI api"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "ipykernel",
    "Pillow",
    "PyMuPDF",
    "openai",
    "vllm",  # Just list the package name here
]

[dependency-groups]
dev = []

# --- Configure the Extra Indexes for vLLM Nightly & PyTorch ---

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly"
explicit = false  # Let uv search this index automatically

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = false